# readability

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  justfile
src/: arguments.rs  article.rs  article_fragment.rs  context.rs  document.rs  error.rs  lib.rs  main.rs  metadata.rs  node_ref_ext.rs  options.rs  pipeline.rs  re.rs  readability.rs  serializable_node.rs  stage.rs  title_extractor.rs
src/stage/: article.rs  clean_class_attributes.rs  element_limit.rs  enforce_void_self_closing.rs  ensure_paragraph_trailing_newline.rs  excerpt_fallback.rs  extract_byline.rs  extract_dir.rs  extract_excerpt.rs  extract_json_ld.rs  extract_lang.rs  extract_meta_tags.rs  extract_title.rs  fix_lazy_images.rs  fix_relative_uris.rs  flatten_simple_tables.rs  language.rs  metadata.rs  normalize_article_headings.rs  normalize_article_root.rs  normalize_article_whitespace.rs  normalize_containers.rs  postprocess.rs  remove_comment_sections.rs  remove_disallowed_nodes.rs  remove_empty_containers.rs  remove_hidden_nodes.rs  remove_non_content_elements.rs  remove_unlikely_candidates.rs  replace_break_sequences.rs  rewrite_center_tags.rs  rewrite_font_tags.rs  rewrite_line_breaks.rs  sanitization.rs  strip_presentational_attributes.rs  test.rs  unescape_html_entities.rs  unwrap_noscript_images.rs
tests/: integration.rs  readability_snapshots.rs
tests/fixtures/001-get-your-frontend-javascript-code-covered/: expected.html  source.html
tests/fixtures/003-metadata-preferred/: expected.html  source.html
tests/snapshots/: readability_snapshots__article@001-get-your-frontend-javascript-code-covered.snap  readability_snapshots__article@003-metadata-preferred.snap
